manifests/api-designer/base/studio-editors/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: api-designer
    component: studio-editors
  name: studio-editors
spec:
  replicas: 1
  selector:
    component: studio-editors
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        component: studio-editors
      name: studio-editors
    spec:
      containers:
      - image: studio-editors:latest
        imagePullPolicy: Always
        name: studio-editors
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 1300Mi
          requests:
            cpu: 100m
            memory: 600Mi
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - studio-editors
      from:
        kind: ImageStreamTag
        name: studio-editors:latest
    type: ImageChange
