manifests/api-designer/base/studio-editors/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-designer
    component: studio-editors
  name: studio-editors
spec:
  ports:
  - name: 9011-http
    port: 9011
    protocol: TCP
    targetPort: 8080
  selector:
    component: studio-editors
