manifests/api-designer/base/studio-editors/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: studio-editors
  name: studio-editors
spec:
  host: ''
  port:
    targetPort: 9011-http
  to:
    kind: Service
    name: studio-editors
    weight: 100
  wildcardPolicy: None
